<resources>
    <string name="app_name">Game of Points</string>
    <string name="Start">Start</string>
    <string name="Tap_to">Tap to start</string>
    <string name="Wappen">Blackbird / Duck / Wolf</string>
    <string name="Planetenauswahl">Level selection:</string>

    <string name="Level1">Trius:</string>
    <string name="Level2">Quatron:</string>
    <string name="Level3">Planet 3:</string>
    <string name="Level4">Türkis</string>
    <string name="Level5">Snow</string>
    <string name="Level6">Lava</string>
    <string name="Level7">Sun</string>
    <string name="Level8">Ultron</string>

    <string name="Planetanzeige">Planet:</string>
    <string name="Counter">Counter</string>

    <string name="navigationitem1">item1</string>
    <string name="navigationitem2">item2</string>
    <string name="navigationitem3">item3</string>

    <string name="picture">picture</string>
    <string name="String">String</string>
    <string name="shop">Shop:</string>
    <string name="character">Characters:</string>
    <string name="Credits">Credits:</string>
    <string name="Settings">Settings:</string>
    <string name="Developers">Developers</string>
    <string name="Nano">Naomi Remmlinger</string>
    <string name="Fabi">Fabian Walliser</string>
    <string name="Music">Music</string>
    <string name="Tommi">Thomas Lohfink</string>
    <string name="Turnmusic">Turn on/off music</string>
    <string name="Continue">Continue</string>
    <string name="loading">Loading....</string>
</resources>
