<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sterne">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/levelauswahl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Planetenauswahl"
                android:textColor="@color/mainText" />

            <ImageView
                android:id="@+id/zuruekLevel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/picture"
                android:src="@android:drawable/ic_delete" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/scroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/Level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <!-- Von hier aus die nächsten Level kopieren-->

                <LinearLayout
                    android:id="@+id/Level1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <!--margineRight|Left = (400-planetSize)/2-->

                    <TextView
                        android:id="@+id/level1name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="40dp"
                        android:text="@string/Level1"
                        android:textColor="@color/mainText" />

                    <ImageView
                        android:id="@+id/rotate1"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:background="@drawable/rotate_1"
                        android:contentDescription="@string/picture" />

                </LinearLayout>

                <!-- bis hier. Dann: LayoutId ändern, text ändern, src des Bildes ändern-->

                <LinearLayout
                    android:id="@+id/Level2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="100dp"
                    android:layout_marginLeft="58dp"
                    android:layout_marginRight="58dp"
                    android:layout_weight="1"
                    android:orientation="vertical">>

                    <TextView
                        android:id="@+id/level2name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="40dp"
                        android:text="@string/Level2"
                        android:textColor="@color/mainText" />

                    <ImageView
                        android:id="@+id/rotate2"
                        android:layout_width="284dp"
                        android:layout_height="284dp"
                        android:background="@drawable/rotate_2"
                        android:contentDescription="@string/picture" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Level3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical">>

                    <TextView
                        android:id="@+id/level3name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="40dp"
                        android:text="@string/Level3"
                        android:textColor="@color/mainText" />

                    <ImageView
                        android:id="@+id/rotate3"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:background="@drawable/rotate_3"
                        android:contentDescription="@string/picture" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Level4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level4name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="40dp"
                        android:text="@string/Level4"
                        android:textColor="@color/mainText" />

                    <ImageView
                        android:id="@+id/rotate4"
                        android:layout_width="240dp"
                        android:layout_height="240dp"
                        android:background="@drawable/rotate_4"
                        android:contentDescription="@string/picture" />

                </LinearLayout>

            </LinearLayout>


        </HorizontalScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>