<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/playername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/String"
            android:textColor="@color/mainText"
            tools:text="@string/String" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/player1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/playerbackground1"
                    android:src="@drawable/krokotest" />

                <ImageView
                    android:id="@+id/leftplayer"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </FrameLayout>

            <ImageView
                android:id="@+id/player2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:background="@drawable/playerbackground1"
                android:src="@drawable/krokotest" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/player3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/playerbackground1"
                    android:src="@drawable/krokotest" />

                <ImageView
                    android:id="@+id/rightplayer"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/String"
                    android:textColor="@color/mainText"
                    tools:text="@string/String" />

                <ImageView
                    android:id="@+id/money"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/picture"
                    android:src="@drawable/coin" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/mainText"
            tools:text="@string/String" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:src="@drawable/coin" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/gradient_leiste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></FrameLayout>

    <ImageView
        android:id="@+id/item1"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/navigationitem3"
        android:src="@drawable/itemdeath2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/item2"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/picture"
        android:src="@drawable/itemlive3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/item3"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/picture"
        android:src="@drawable/itemdeath1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/item4"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/picture"
        android:src="@drawable/itemdeath3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/item5"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/picture"
        android:src="@drawable/itemdeath3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>